Fixed some spacing issues with the section tags and added some styling to the skills icons

--- a/src/index.css
+++ b/src/index.css
@@ -1,38 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300&family=Work+Sans:wght@400;500&display=swap');
-body{
-  background: #fdfbfb;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #ebedee, #cccaca, #fdf9ed);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, rgba(217, 238, 255, 0.5), #ffffff, #fdf9ed); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-}
-
-/* section:nth-child(odd) {
-
-} */
-
-.skills:nth-child(odd){
-  border-radius: 0.625rem;
-  justify-content: center;
-  align-items: center;
-  margin: 30px;
-  padding: 1rem;
-}
 
 body {
+  background: linear-gradient(to right, rgba(217, 238, 255, 0.5), #ffffff, #fdf9ed);
   background-image: url(/src/assets/landing_page_bg.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
 }
 
 .img-fluid {
-    max-width: 100%;
-    height: 100%;
+  max-width: 100%;
+  height: auto;
 }
 
 svg {
-  height:30px;
+  height: 30px;
   margin-bottom: 5px; 
   padding-top: 5px;
 }
@@ -54,10 +36,10 @@ p {
 }
 
 .logo {
-    color: black;
-    text-decoration: none;
-    font-size: 34px;
-    font-weight: 700;
+  color: black;
+  text-decoration: none;
+  font-size: 34px;
+  font-weight: 700;
 }
 
 .display-3,
@@ -65,13 +47,17 @@ p {
   font-family: 'Manrope', sans-serif;
 }
 
-.header-shadow{
- box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+.header-shadow {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.btn{ border-radius: 0; transition: background-color 0.3s ease, color 0.3s ease; }
-.btn:hover{
-  border-radius: 0; background-color: rgb(112, 112, 112);
+.btn {
+  border-radius: 0; 
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.btn:hover {
+  background-color: rgb(112, 112, 112);
 }
 
 .nav-masthead .nav-link {
@@ -110,10 +96,17 @@ footer a:hover {
   opacity: 1;
 }
 
+.skill-icon {
+  margin: 10px;
+  padding: 5px;
+  background-color: rgb(228, 242, 250);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
 @media (min-width: 992px) { 
   .section-container {
-  max-width: 80em;
-}
+    max-width: 80em;
+  }
 }
 
 @media (min-width: 520px) {
